--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,11 +1,37 @@
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true" >
+    android:fitsSystemWindows="true"
+    android:id="@+id/root"
+    >
+    <RelativeLayout
+        android:id="@+id/scoreOverlay"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:layout_alignParentTop="true"
+        android:background="#DDDDDD"
+        android:visibility="gone"
+        android:elevation="8dp">
+
+        <TextView
+            android:id="@+id/textFinalScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Score: 0"
+            android:textSize="70dp"
+            android:textColor="#000000"
+            android:layout_centerInParent="true"/>
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <!--  상단 상태 표시줄  -->
     <LinearLayout
+        android:id="@+id/state"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="12dp"
@@ -38,7 +64,7 @@
         android:alignmentMode="alignMargins"
         android:columnCount="10"
         android:rowCount="12"
-        android:padding="16dp"
+        android:padding="20dp"
         android:useDefaultMargins="true" />
 
     <LinearLayout
@@ -84,4 +110,5 @@
         android:layout_marginTop="16dp"
         android:text="처음 화면으로" />
     </LinearLayout>
-</LinearLayout>
+    </LinearLayout>
+</FrameLayout>
