--- a/app/src/main/res/layout/activity_option.xml
+++ b/app/src/main/res/layout/activity_option.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/helpTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="도움말"
+                android:text="설정"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:layout_centerHorizontal="true"/>
